ui.cpp now compatible with main_classes_v2

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 INC = ../inc
-OBJS = main_v2.o main_classes_v2.o auxillary.o ui_v2.o
+OBJS = main_v2.o main_classes_v2.o auxillary.o ui.o
 CC = g++
 CFLAGS = -Wall -c 
 LFLAGS = -Wall
@@ -10,8 +10,8 @@ main: $(OBJS)
 main_v2.o : main_v2.cpp $(INC)/main_classes_v2.h $(INC)/auxillary.h $(INC)/ui.h
 	$(CC) -I$(INC) $(CFLAGS) main_v2.cpp
 
-ui_v2.o : ui_v2.cpp $(INC)/ui.h $(INC)/main_classes_v2.h $(INC)/auxillary.h
-	$(CC) -I$(INC) $(CFLAGS) ui_v2.cpp
+ui.o : ui.cpp $(INC)/ui.h $(INC)/main_classes_v2.h $(INC)/auxillary.h
+	$(CC) -I$(INC) $(CFLAGS) ui.cpp
 
 main_classes_v2.o : main_classes_v2.cpp $(INC)/main_classes_v2.h $(INC)/auxillary.h
 	$(CC) -I$(INC) $(CFLAGS) main_classes_v2.cpp
